--- a/css/output.css
+++ b/css/output.css
@@ -200,6 +200,9 @@
   .-top-16 {
     top: calc(var(--spacing) * -16);
   }
+  .-top-20 {
+    top: calc(var(--spacing) * -20);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -233,11 +236,8 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .-mt-4 {
-    margin-top: calc(var(--spacing) * -4);
-  }
-  .-mt-6 {
-    margin-top: calc(var(--spacing) * -6);
+  .my-16 {
+    margin-block: calc(var(--spacing) * 16);
   }
   .-mt-7 {
     margin-top: calc(var(--spacing) * -7);
@@ -290,8 +290,14 @@
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
   }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
+  }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
+  }
+  .mb-2\.5 {
+    margin-bottom: calc(var(--spacing) * 2.5);
   }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
@@ -368,6 +374,9 @@
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
@@ -383,6 +392,9 @@
   .table {
     display: table;
   }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
@@ -392,11 +404,17 @@
   .h-10\! {
     height: calc(var(--spacing) * 10) !important;
   }
+  .h-10\.5 {
+    height: calc(var(--spacing) * 10.5);
+  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
   .h-13 {
     height: calc(var(--spacing) * 13);
+  }
+  .h-14 {
+    height: calc(var(--spacing) * 14);
   }
   .h-16 {
     height: calc(var(--spacing) * 16);
@@ -437,6 +455,9 @@
   .max-h-\[950px\] {
     max-height: 950px;
   }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
@@ -445,6 +466,9 @@
   }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
+  }
+  .w-12 {
+    width: calc(var(--spacing) * 12);
   }
   .w-16 {
     width: calc(var(--spacing) * 16);
@@ -518,11 +542,17 @@
   .w-\[350px\] {
     width: 350px;
   }
+  .w-\[722px\] {
+    width: 722px;
+  }
   .w-full {
     width: 100%;
   }
   .w-full\! {
     width: 100% !important;
+  }
+  .max-w-21 {
+    max-width: calc(var(--spacing) * 21);
   }
   .max-w-90 {
     max-width: calc(var(--spacing) * 90);
@@ -551,11 +581,17 @@
   .max-w-220 {
     max-width: calc(var(--spacing) * 220);
   }
+  .max-w-250 {
+    max-width: calc(var(--spacing) * 250);
+  }
   .max-w-\[45\%\] {
     max-width: 45%;
   }
   .max-w-\[70\%\] {
     max-width: 70%;
+  }
+  .max-w-\[555px\] {
+    max-width: 555px;
   }
   .max-w-\[793px\] {
     max-width: 793px;
@@ -587,6 +623,9 @@
   .-rotate-90 {
     rotate: calc(90deg * -1);
   }
+  .rotate-90 {
+    rotate: 90deg;
+  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
@@ -605,6 +644,9 @@
   .flex-col {
     flex-direction: column;
   }
+  .flex-col\! {
+    flex-direction: column !important;
+  }
   .flex-wrap {
     flex-wrap: wrap;
   }
@@ -619,6 +661,9 @@
   }
   .justify-center {
     justify-content: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
   }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
@@ -638,8 +683,14 @@
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
+  }
+  .gap-13 {
+    gap: calc(var(--spacing) * 13);
   }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
@@ -687,6 +738,10 @@
     border-top-left-radius: 56px;
     border-top-right-radius: 56px;
   }
+  .rounded-t-xl {
+    border-top-left-radius: var(--radius-xl);
+    border-top-right-radius: var(--radius-xl);
+  }
   .rounded-l-4xl {
     border-top-left-radius: var(--radius-4xl);
     border-bottom-left-radius: var(--radius-4xl);
@@ -722,6 +777,9 @@
   .border-dashed {
     --tw-border-style: dashed;
     border-style: dashed;
+  }
+  .border-\[\#E8EBED\] {
+    border-color: #E8EBED;
   }
   .border-b-\[\#3A3A3A\] {
     border-bottom-color: #3A3A3A;
@@ -759,6 +817,12 @@
   .object-cover {
     object-fit: cover;
   }
+  .p-2 {
+    padding: calc(var(--spacing) * 2);
+  }
+  .p-2\.5 {
+    padding: calc(var(--spacing) * 2.5);
+  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
@@ -779,6 +843,12 @@
   }
   .p-40 {
     padding: calc(var(--spacing) * 40);
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
@@ -924,6 +994,10 @@
     font-size: var(--text-xl) !important;
     line-height: var(--tw-leading, var(--text-xl--line-height)) !important;
   }
+  .text-xs {
+    font-size: var(--text-xs);
+    line-height: var(--tw-leading, var(--text-xs--line-height));
+  }
   .text-\[1\.75rem\] {
     font-size: 1.75rem;
   }
@@ -1016,6 +1090,10 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .outline-none {
+    --tw-outline-style: none;
+    outline-style: none;
+  }
   .hover\:text-\[\#C83A36\] {
     &:hover {
       @media (hover: hover) {
@@ -1030,9 +1108,69 @@
       }
     }
   }
+  .disabled\:opacity-50 {
+    &:disabled {
+      opacity: 50%;
+    }
+  }
   .max-\[1920px\]\:h-160 {
     @media (width < 1920px) {
       height: calc(var(--spacing) * 160);
+    }
+  }
+  .max-\[1920px\]\:max-h-10 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1920px\]\:max-h-100 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 100);
+    }
+  }
+  .max-\[1920px\]\:max-h-150 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 150);
+    }
+  }
+  .max-\[1920px\]\:max-h-170 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 170);
+    }
+  }
+  .max-\[1920px\]\:max-h-180 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 180);
+    }
+  }
+  .max-\[1920px\]\:max-h-200 {
+    @media (width < 1920px) {
+      max-height: calc(var(--spacing) * 200);
+    }
+  }
+  .max-\[1920px\]\:max-h-\[10vh\] {
+    @media (width < 1920px) {
+      max-height: 10vh;
+    }
+  }
+  .max-\[1920px\]\:max-h-\[70vh\] {
+    @media (width < 1920px) {
+      max-height: 70vh;
+    }
+  }
+  .max-\[1920px\]\:max-h-\[80vh\] {
+    @media (width < 1920px) {
+      max-height: 80vh;
+    }
+  }
+  .max-\[1920px\]\:max-h-\[85vh\] {
+    @media (width < 1920px) {
+      max-height: 85vh;
+    }
+  }
+  .max-\[1920px\]\:max-h-\[87vh\] {
+    @media (width < 1920px) {
+      max-height: 87vh;
     }
   }
   .max-\[1920px\]\:w-\[350px\] {
@@ -1185,6 +1323,11 @@
       height: calc(var(--spacing) * 13);
     }
   }
+  .max-\[1440px\]\:h-13\! {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 13) !important;
+    }
+  }
   .max-\[1440px\]\:h-16 {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 16);
@@ -1215,9 +1358,24 @@
       height: calc(var(--spacing) * 90);
     }
   }
+  .max-\[1440px\]\:h-150\! {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 150) !important;
+    }
+  }
+  .max-\[1440px\]\:h-200 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 200);
+    }
+  }
   .max-\[1440px\]\:max-h-\[850px\] {
     @media (width < 1440px) {
       max-height: 850px;
+    }
+  }
+  .max-\[1440px\]\:max-h-full {
+    @media (width < 1440px) {
+      max-height: 100%;
     }
   }
   .max-\[1440px\]\:w-6 {
@@ -1253,6 +1411,16 @@
   .max-\[1440px\]\:w-25\.5 {
     @media (width < 1440px) {
       width: calc(var(--spacing) * 25.5);
+    }
+  }
+  .max-\[1440px\]\:w-30 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 30);
+    }
+  }
+  .max-\[1440px\]\:w-30\! {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 30) !important;
     }
   }
   .max-\[1440px\]\:w-31\.5 {
@@ -1350,6 +1518,11 @@
       width: 186px;
     }
   }
+  .max-\[1440px\]\:w-\[504px\] {
+    @media (width < 1440px) {
+      width: 504px;
+    }
+  }
   .max-\[1440px\]\:max-w-5xl {
     @media (width < 1440px) {
       max-width: var(--container-5xl);
@@ -1368,6 +1541,11 @@
   .max-\[1440px\]\:max-w-100 {
     @media (width < 1440px) {
       max-width: calc(var(--spacing) * 100);
+    }
+  }
+  .max-\[1440px\]\:max-w-150 {
+    @media (width < 1440px) {
+      max-width: calc(var(--spacing) * 150);
     }
   }
   .max-\[1440px\]\:max-w-170 {
@@ -1395,6 +1573,11 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
+  .max-\[1440px\]\:flex-col {
+    @media (width < 1440px) {
+      flex-direction: column;
+    }
+  }
   .max-\[1440px\]\:items-start {
     @media (width < 1440px) {
       align-items: flex-start;
@@ -1408,6 +1591,11 @@
   .max-\[1440px\]\:gap-3 {
     @media (width < 1440px) {
       gap: calc(var(--spacing) * 3);
+    }
+  }
+  .max-\[1440px\]\:gap-4 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 4);
     }
   }
   .max-\[1440px\]\:gap-5 {
@@ -1615,6 +1803,11 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
+  .max-\[1440px\]\:text-\[0\.625rem\] {
+    @media (width < 1440px) {
+      font-size: 0.625rem;
+    }
+  }
   .max-\[1440px\]\:leading-4\.5 {
     @media (width < 1440px) {
       --tw-leading: calc(var(--spacing) * 4.5);
@@ -1733,6 +1926,11 @@
       margin-bottom: calc(var(--spacing) * 6);
     }
   }
+  .max-\[1024px\]\:mb-8 {
+    @media (width < 1024px) {
+      margin-bottom: calc(var(--spacing) * 8);
+    }
+  }
   .max-\[1024px\]\:mb-10 {
     @media (width < 1024px) {
       margin-bottom: calc(var(--spacing) * 10);
@@ -1761,6 +1959,11 @@
   .max-\[1024px\]\:hidden {
     @media (width < 1024px) {
       display: none;
+    }
+  }
+  .max-\[1024px\]\:h-6 {
+    @media (width < 1024px) {
+      height: calc(var(--spacing) * 6);
     }
   }
   .max-\[1024px\]\:h-8 {
@@ -1796,6 +1999,11 @@
   .max-\[1024px\]\:h-102\.5 {
     @media (width < 1024px) {
       height: calc(var(--spacing) * 102.5);
+    }
+  }
+  .max-\[1024px\]\:w-6 {
+    @media (width < 1024px) {
+      width: calc(var(--spacing) * 6);
     }
   }
   .max-\[1024px\]\:w-8 {
@@ -1838,6 +2046,16 @@
       width: calc(var(--spacing) * 110);
     }
   }
+  .max-\[1024px\]\:w-\[728px\] {
+    @media (width < 1024px) {
+      width: 728px;
+    }
+  }
+  .max-\[1024px\]\:w-\[730px\] {
+    @media (width < 1024px) {
+      width: 730px;
+    }
+  }
   .max-\[1024px\]\:w-full {
     @media (width < 1024px) {
       width: 100%;
@@ -1846,6 +2064,11 @@
   .max-\[1024px\]\:max-w-3xl {
     @media (width < 1024px) {
       max-width: var(--container-3xl);
+    }
+  }
+  .max-\[1024px\]\:max-w-51 {
+    @media (width < 1024px) {
+      max-width: calc(var(--spacing) * 51);
     }
   }
   .max-\[1024px\]\:max-w-62 {
@@ -1873,6 +2096,11 @@
       max-width: 100%;
     }
   }
+  .max-\[1024px\]\:flex-1 {
+    @media (width < 1024px) {
+      flex: 1;
+    }
+  }
   .max-\[1024px\]\:basis-\[calc\(50\%-0\.375rem\)\] {
     @media (width < 1024px) {
       flex-basis: calc(50% - 0.375rem);
@@ -1891,6 +2119,11 @@
   .max-\[1024px\]\:flex-col {
     @media (width < 1024px) {
       flex-direction: column;
+    }
+  }
+  .max-\[1024px\]\:items-center {
+    @media (width < 1024px) {
+      align-items: center;
     }
   }
   .max-\[1024px\]\:gap-2 {
@@ -1939,6 +2172,11 @@
   .max-\[1024px\]\:p-3 {
     @media (width < 1024px) {
       padding: calc(var(--spacing) * 3);
+    }
+  }
+  .max-\[1024px\]\:p-4 {
+    @media (width < 1024px) {
+      padding: calc(var(--spacing) * 4);
     }
   }
   .max-\[1024px\]\:p-6 {
@@ -2398,6 +2636,11 @@
   .max-\[768px\]\:max-w-full {
     @media (width < 768px) {
       max-width: 100%;
+    }
+  }
+  .max-\[768px\]\:flex-1 {
+    @media (width < 768px) {
+      flex: 1;
     }
   }
   .max-\[768px\]\:shrink-0 {
