--- a/css/output.css
+++ b/css/output.css
@@ -245,9 +245,6 @@
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
   }
-  .-mt-8 {
-    margin-top: calc(var(--spacing) * -8);
-  }
   .-mt-13 {
     margin-top: calc(var(--spacing) * -13);
   }
@@ -451,9 +448,6 @@
   }
   .h-185 {
     height: calc(var(--spacing) * 185);
-  }
-  .max-h-\[950px\] {
-    max-height: 950px;
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
@@ -811,6 +805,9 @@
   .bg-\[\#FFFFFF1A\] {
     background-color: #FFFFFF1A;
   }
+  .bg-\[\#e8ebed\] {
+    background-color: #e8ebed;
+  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -843,9 +840,6 @@
   }
   .p-40 {
     padding: calc(var(--spacing) * 40);
-  }
-  .px-1 {
-    padding-inline: calc(var(--spacing) * 1);
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
@@ -898,11 +892,17 @@
   .pt-19 {
     padding-top: calc(var(--spacing) * 19);
   }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
   .pt-22 {
     padding-top: calc(var(--spacing) * 22);
   }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
+  }
+  .pt-39 {
+    padding-top: calc(var(--spacing) * 39);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
@@ -1118,56 +1118,6 @@
       height: calc(var(--spacing) * 160);
     }
   }
-  .max-\[1920px\]\:max-h-10 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 10);
-    }
-  }
-  .max-\[1920px\]\:max-h-100 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 100);
-    }
-  }
-  .max-\[1920px\]\:max-h-150 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 150);
-    }
-  }
-  .max-\[1920px\]\:max-h-170 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 170);
-    }
-  }
-  .max-\[1920px\]\:max-h-180 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 180);
-    }
-  }
-  .max-\[1920px\]\:max-h-200 {
-    @media (width < 1920px) {
-      max-height: calc(var(--spacing) * 200);
-    }
-  }
-  .max-\[1920px\]\:max-h-\[10vh\] {
-    @media (width < 1920px) {
-      max-height: 10vh;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[70vh\] {
-    @media (width < 1920px) {
-      max-height: 70vh;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[80vh\] {
-    @media (width < 1920px) {
-      max-height: 80vh;
-    }
-  }
-  .max-\[1920px\]\:max-h-\[85vh\] {
-    @media (width < 1920px) {
-      max-height: 85vh;
-    }
-  }
   .max-\[1920px\]\:max-h-\[87vh\] {
     @media (width < 1920px) {
       max-height: 87vh;
@@ -1366,11 +1316,6 @@
   .max-\[1440px\]\:h-200 {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 200);
-    }
-  }
-  .max-\[1440px\]\:max-h-\[850px\] {
-    @media (width < 1440px) {
-      max-height: 850px;
     }
   }
   .max-\[1440px\]\:max-h-full {
@@ -2051,11 +1996,6 @@
       width: 728px;
     }
   }
-  .max-\[1024px\]\:w-\[730px\] {
-    @media (width < 1024px) {
-      width: 730px;
-    }
-  }
   .max-\[1024px\]\:w-full {
     @media (width < 1024px) {
       width: 100%;
@@ -2086,19 +2026,9 @@
       max-width: 50%;
     }
   }
-  .max-\[1024px\]\:max-w-\[550px\] {
-    @media (width < 1024px) {
-      max-width: 550px;
-    }
-  }
   .max-\[1024px\]\:max-w-full {
     @media (width < 1024px) {
       max-width: 100%;
-    }
-  }
-  .max-\[1024px\]\:flex-1 {
-    @media (width < 1024px) {
-      flex: 1;
     }
   }
   .max-\[1024px\]\:basis-\[calc\(50\%-0\.375rem\)\] {
@@ -2748,11 +2678,6 @@
   .max-\[768px\]\:px-4 {
     @media (width < 768px) {
       padding-inline: calc(var(--spacing) * 4);
-    }
-  }
-  .max-\[768px\]\:px-5 {
-    @media (width < 768px) {
-      padding-inline: calc(var(--spacing) * 5);
     }
   }
   .max-\[768px\]\:py-3\.5 {
@@ -3424,6 +3349,22 @@ button {
   color: #3a3a3a !important;
 }
 .truck-card:not(.active) p {
+  color: #3a3a3a99 !important;
+}
+.truck-card-form {
+  transition: 0.25s ease;
+  cursor: pointer;
+}
+.truck-card-form.active {
+  background: #e8ebed !important;
+}
+.truck-card-form:not(.active) {
+  background: #f2f5f7 !important;
+}
+.truck-card-form.active p {
+  color: #3a3a3a !important;
+}
+.truck-card-form:not(.active) p {
   color: #3a3a3a99 !important;
 }
 .tab-btn {
