--- a/css/output.css
+++ b/css/output.css
@@ -215,9 +215,6 @@
   .right-3 {
     right: calc(var(--spacing) * 3);
   }
-  .right-4 {
-    right: calc(var(--spacing) * 4);
-  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
@@ -1166,11 +1163,6 @@
       top: calc(var(--spacing) * -46);
     }
   }
-  .max-\[1440px\]\:-right-1 {
-    @media (width < 1440px) {
-      right: calc(var(--spacing) * -1);
-    }
-  }
   .max-\[1440px\]\:-right-2 {
     @media (width < 1440px) {
       right: calc(var(--spacing) * -2);
@@ -1184,16 +1176,6 @@
   .max-\[1440px\]\:-right-48 {
     @media (width < 1440px) {
       right: calc(var(--spacing) * -48);
-    }
-  }
-  .max-\[1440px\]\:right-1 {
-    @media (width < 1440px) {
-      right: calc(var(--spacing) * 1);
-    }
-  }
-  .max-\[1440px\]\:right-2 {
-    @media (width < 1440px) {
-      right: calc(var(--spacing) * 2);
     }
   }
   .max-\[1440px\]\:bottom-8 {
@@ -1224,6 +1206,11 @@
   .max-\[1440px\]\:mt-20 {
     @media (width < 1440px) {
       margin-top: calc(var(--spacing) * 20);
+    }
+  }
+  .max-\[1440px\]\:-mb-5 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * -5);
     }
   }
   .max-\[1440px\]\:mb-2 {
@@ -1474,16 +1461,6 @@
   .max-\[1440px\]\:w-74\.5 {
     @media (width < 1440px) {
       width: calc(var(--spacing) * 74.5);
-    }
-  }
-  .max-\[1440px\]\:w-80 {
-    @media (width < 1440px) {
-      width: calc(var(--spacing) * 80);
-    }
-  }
-  .max-\[1440px\]\:w-90 {
-    @media (width < 1440px) {
-      width: calc(var(--spacing) * 90);
     }
   }
   .max-\[1440px\]\:w-92\.75 {
@@ -1744,6 +1721,11 @@
       padding-bottom: calc(var(--spacing) * 12);
     }
   }
+  .max-\[1440px\]\:pb-14 {
+    @media (width < 1440px) {
+      padding-bottom: calc(var(--spacing) * 14);
+    }
+  }
   .max-\[1440px\]\:pb-17 {
     @media (width < 1440px) {
       padding-bottom: calc(var(--spacing) * 17);
@@ -1822,6 +1804,93 @@
     @media (width < 1440px) {
       --tw-leading: calc(var(--spacing) * 7);
       line-height: calc(var(--spacing) * 7);
+    }
+  }
+  .max-\[1025px\]\:mt-0 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .max-\[1025px\]\:mt-4 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 4);
+    }
+  }
+  .max-\[1025px\]\:mt-5 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 5);
+    }
+  }
+  .max-\[1025px\]\:mt-8 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 8);
+    }
+  }
+  .max-\[1025px\]\:mt-10 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1025px\]\:mt-11 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 11);
+    }
+  }
+  .max-\[1025px\]\:mt-12 {
+    @media (width < 1025px) {
+      margin-top: calc(var(--spacing) * 12);
+    }
+  }
+  .max-\[1025px\]\:mb-10 {
+    @media (width < 1025px) {
+      margin-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1025px\]\:hidden {
+    @media (width < 1025px) {
+      display: none;
+    }
+  }
+  .max-\[1025px\]\:w-8 {
+    @media (width < 1025px) {
+      width: calc(var(--spacing) * 8);
+    }
+  }
+  .max-\[1025px\]\:pr-4\! {
+    @media (width < 1025px) {
+      padding-right: calc(var(--spacing) * 4) !important;
+    }
+  }
+  .max-\[1025px\]\:pr-8 {
+    @media (width < 1025px) {
+      padding-right: calc(var(--spacing) * 8);
+    }
+  }
+  .max-\[1025px\]\:pr-8\! {
+    @media (width < 1025px) {
+      padding-right: calc(var(--spacing) * 8) !important;
+    }
+  }
+  .max-\[1025px\]\:text-5xl\! {
+    @media (width < 1025px) {
+      font-size: var(--text-5xl) !important;
+      line-height: var(--tw-leading, var(--text-5xl--line-height)) !important;
+    }
+  }
+  .max-\[1025px\]\:text-xs {
+    @media (width < 1025px) {
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
+    }
+  }
+  .max-\[1025px\]\:text-\[12px\]\! {
+    @media (width < 1025px) {
+      font-size: 12px !important;
+    }
+  }
+  .max-\[1025px\]\:text-\[48px\]\! {
+    @media (width < 1025px) {
+      font-size: 48px !important;
     }
   }
   .max-\[1024px\]\:-top-34 {
@@ -2049,6 +2118,11 @@
       width: calc(var(--spacing) * 110);
     }
   }
+  .max-\[1024px\]\:w-\[138px\] {
+    @media (width < 1024px) {
+      width: 138px;
+    }
+  }
   .max-\[1024px\]\:w-\[728px\] {
     @media (width < 1024px) {
       width: 728px;
@@ -2212,6 +2286,11 @@
       padding-top: calc(var(--spacing) * 10);
     }
   }
+  .max-\[1024px\]\:pr-0\! {
+    @media (width < 1024px) {
+      padding-right: calc(var(--spacing) * 0) !important;
+    }
+  }
   .max-\[1024px\]\:pb-36 {
     @media (width < 1024px) {
       padding-bottom: calc(var(--spacing) * 36);
@@ -2220,6 +2299,11 @@
   .max-\[1024px\]\:pl-5 {
     @media (width < 1024px) {
       padding-left: calc(var(--spacing) * 5);
+    }
+  }
+  .max-\[1024px\]\:pl-10 {
+    @media (width < 1024px) {
+      padding-left: calc(var(--spacing) * 10);
     }
   }
   .max-\[1024px\]\:text-2xl {
@@ -2264,9 +2348,19 @@
       line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
+  .max-\[1024px\]\:text-\[2\.25rem\]\! {
+    @media (width < 1024px) {
+      font-size: 2.25rem !important;
+    }
+  }
   .max-\[1024px\]\:text-\[2rem\] {
     @media (width < 1024px) {
       font-size: 2rem;
+    }
+  }
+  .max-\[1024px\]\:text-\[2rem\]\! {
+    @media (width < 1024px) {
+      font-size: 2rem !important;
     }
   }
   .max-\[1024px\]\:leading-4 {
@@ -2340,6 +2434,11 @@
   .max-\[768px\]\:mt-16 {
     @media (width < 768px) {
       margin-top: calc(var(--spacing) * 16);
+    }
+  }
+  .max-\[768px\]\:-mb-3 {
+    @media (width < 768px) {
+      margin-bottom: calc(var(--spacing) * -3);
     }
   }
   .max-\[768px\]\:mb-2 {
@@ -2709,6 +2808,16 @@
       padding: calc(var(--spacing) * 5);
     }
   }
+  .max-\[768px\]\:p-6 {
+    @media (width < 768px) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[768px\]\:p-10 {
+    @media (width < 768px) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
   .max-\[768px\]\:px-0 {
     @media (width < 768px) {
       padding-inline: calc(var(--spacing) * 0);
@@ -2737,6 +2846,11 @@
   .max-\[768px\]\:pt-3 {
     @media (width < 768px) {
       padding-top: calc(var(--spacing) * 3);
+    }
+  }
+  .max-\[768px\]\:pt-9 {
+    @media (width < 768px) {
+      padding-top: calc(var(--spacing) * 9);
     }
   }
   .max-\[768px\]\:pt-10 {
@@ -2847,11 +2961,6 @@
     @media (width < 768px) {
       overflow-wrap: normal;
       word-break: normal;
-    }
-  }
-  .min-\[768px\]\:left-11 {
-    @media (width >= 768px) {
-      left: calc(var(--spacing) * 11);
     }
   }
   .min-\[1024px\]\:justify-between {
@@ -3253,13 +3362,13 @@ button {
     font-size: 2rem;
   }
   .about_title {
-    font-size: 2.25rem;
+    font-size: 2.25rem !important;
   }
   .about_info {
-    font-size: 0.75rem;
+    font-size: 0.75rem !important;
   }
   .about_company_wrap {
-    padding-right: 0;
+    padding-right: 0 !important;
     border-radius: 12px !important;
   }
   .about_icon_wrap {
@@ -3277,10 +3386,18 @@ button {
   .radius_servie5 {
     border-radius: 24px !important;
   }
+  .about_company_image {
+    margin-top: 1rem;
+    height: 25.625rem;
+    width: 20.25rem;
+  }
 }
 @media (max-width: 768px) {
   .about_info {
     font-size: 0.75rem;
+  }
+  .service-card {
+    padding: 1.5rem !important;
   }
   .about_company_wrap {
     padding-right: 0;
@@ -3316,6 +3433,8 @@ button {
   button {
     font-size: small;
   }
+}
+@media (max-width: 767px) {
   .footer_section_mobile::before {
     content: "";
     position: absolute;
