--- a/css/style.css
+++ b/css/style.css
@@ -432,13 +432,13 @@ button {
     font-size: 2rem;
   }
   .about_title {
-    font-size: 2.25rem;
+    font-size: 2.25rem !important;
   }
   .about_info {
-    font-size: 0.75rem;
+    font-size: 0.75rem !important;
   }
   .about_company_wrap {
-    padding-right: 0;
+    padding-right: 0 !important;
     border-radius: 12px !important;
   }
   .about_icon_wrap {
@@ -455,6 +455,11 @@ button {
   }
   .radius_servie5 {
     border-radius: 24px !important;
+  }
+  .about_company_image {
+    margin-top: 1rem;
+    height: 25.625rem;
+    width: 20.25rem;
   }
 }
 
@@ -499,6 +504,9 @@ button {
   button {
     font-size: small;
   }
+}
+
+@media (max-width: 767px) {
   .footer_section_mobile::before {
     content: "";
     position: absolute;
