--- a/css/output.css
+++ b/css/output.css
@@ -272,9 +272,6 @@
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
-  .mt-20 {
-    margin-top: calc(var(--spacing) * 20);
-  }
   .mt-\[94px\] {
     margin-top: 94px;
   }
@@ -825,6 +822,9 @@
   }
   .object-cover {
     object-fit: cover;
+  }
+  .object-center {
+    object-position: center;
   }
   .p-2 {
     padding: calc(var(--spacing) * 2);
@@ -1901,6 +1901,31 @@
       bottom: calc(var(--spacing) * 2);
     }
   }
+  .max-\[1024px\]\:mt-7 {
+    @media (width < 1024px) {
+      margin-top: calc(var(--spacing) * 7);
+    }
+  }
+  .max-\[1024px\]\:mt-10 {
+    @media (width < 1024px) {
+      margin-top: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1024px\]\:mt-12 {
+    @media (width < 1024px) {
+      margin-top: calc(var(--spacing) * 12);
+    }
+  }
+  .max-\[1024px\]\:mt-13 {
+    @media (width < 1024px) {
+      margin-top: calc(var(--spacing) * 13);
+    }
+  }
+  .max-\[1024px\]\:mt-14 {
+    @media (width < 1024px) {
+      margin-top: calc(var(--spacing) * 14);
+    }
+  }
   .max-\[1024px\]\:mt-17 {
     @media (width < 1024px) {
       margin-top: calc(var(--spacing) * 17);
@@ -2076,9 +2101,29 @@
       width: calc(var(--spacing) * 110);
     }
   }
+  .max-\[1024px\]\:w-\[60\%\] {
+    @media (width < 1024px) {
+      width: 60%;
+    }
+  }
+  .max-\[1024px\]\:w-\[80\%\] {
+    @media (width < 1024px) {
+      width: 80%;
+    }
+  }
+  .max-\[1024px\]\:w-\[90\%\] {
+    @media (width < 1024px) {
+      width: 90%;
+    }
+  }
   .max-\[1024px\]\:w-\[138px\] {
     @media (width < 1024px) {
       width: 138px;
+    }
+  }
+  .max-\[1024px\]\:w-\[324px\] {
+    @media (width < 1024px) {
+      width: 324px;
     }
   }
   .max-\[1024px\]\:w-\[728px\] {
@@ -2116,9 +2161,19 @@
       max-width: 50%;
     }
   }
+  .max-\[1024px\]\:max-w-\[324px\] {
+    @media (width < 1024px) {
+      max-width: 324px;
+    }
+  }
   .max-\[1024px\]\:max-w-full {
     @media (width < 1024px) {
       max-width: 100%;
+    }
+  }
+  .max-\[1024px\]\:flex-0 {
+    @media (width < 1024px) {
+      flex: 0;
     }
   }
   .max-\[1024px\]\:basis-\[calc\(50\%-0\.375rem\)\] {
@@ -2639,6 +2694,11 @@
       width: calc(var(--spacing) * 82);
     }
   }
+  .max-\[768px\]\:w-\[100vw\] {
+    @media (width < 768px) {
+      width: 100vw;
+    }
+  }
   .max-\[768px\]\:w-full {
     @media (width < 768px) {
       width: 100%;
@@ -2746,6 +2806,16 @@
       border-bottom-left-radius: var(--radius-xl);
     }
   }
+  .max-\[768px\]\:object-contain {
+    @media (width < 768px) {
+      object-fit: contain;
+    }
+  }
+  .max-\[768px\]\:object-fill {
+    @media (width < 768px) {
+      object-fit: fill;
+    }
+  }
   .max-\[768px\]\:p-4 {
     @media (width < 768px) {
       padding: calc(var(--spacing) * 4);
@@ -2845,6 +2915,12 @@
     @media (width < 768px) {
       font-size: var(--text-2xl);
       line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .max-\[768px\]\:text-2xl\! {
+    @media (width < 768px) {
+      font-size: var(--text-2xl) !important;
+      line-height: var(--tw-leading, var(--text-2xl--line-height)) !important;
     }
   }
   .max-\[768px\]\:text-base {
